--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -477,7 +477,7 @@ a{
  
 }
 .footer {
-   background-image: url("../img/footer.jpg");
+   background-image: url("../img/footer2.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
