--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -311,7 +311,7 @@ a:hover
 }
 .container2{
   background-image:  url("../img/con3.jpg");
-  height: 161vh;
+  height: 296vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -344,6 +344,25 @@ a:hover
     width: 200%;
   }
 }
+.hover-image .hover-overlay {
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  margin: 7%;
+  width: 91%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
+}
+.container2 .hover-image:hover .hover-details {
+  top: 55%;
+  left: 40%;
+  opacity: 1;
+}
 .container1 .skills-section .skills-sub {
   display: grid;
   grid-template-columns: auto auto;
@@ -358,6 +377,17 @@ a:hover
   border: 6px solid white;
   padding: 14px;
   margin-right: 28px;
+}
+.container3 .time-text {
+  width: 95%;
+  padding: 0px 62px;
+  margin-bottom: -10px;
+  color: #b6b4b4;
+}
+.container3 .time-left {
+  text-align: right;
+  direction: rtl;
+  padding-bottom: 1px;
 }
 }
 
@@ -485,12 +515,25 @@ a:hover
 }
 .container2{
   background-image:  url("../img/con3.jpg");
-  height: 161vh;
+  height: 266vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-
+  .hover-image .hover-overlay {
+    background: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    margin: 7%;
+    width: 91%;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -moz-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
+  }
   .con2{
       background-color: rgba(0, 0, 0, 0.7);
       top: 0;
@@ -514,9 +557,46 @@ a:hover
     width: 91%;
     margin: 7%;
   }
+  
   // .grid{
   //   width: 200%;
   // }
+}
+.container3 {
+  width: 80%;
+  /* padding: 50px 0; */
+  margin: 50px auto;
+  position: relative;
+  /* overflow: hidden; */
+  display: grid;
+  grid-template-columns: auto;
+}
+.container3 .dot {
+  display: none;
+}
+.container3:before {
+display: none;
+}
+.container3 .time-text {
+  width: auto;
+  margin-bottom: 8px;
+  padding: 0; 
+  color: #b6b4b4;
+}
+.container3 .time-text h2 {
+  color: white;
+  white-space: nowrap;
+}
+.container3 .time-left {
+  text-align: left;
+  /* direction: inherit; */
+  padding-bottom: 0;
+}
+.container3 .time-text-left {
+  /* width: 0; */
+  padding: inherit;
+  margin-bottom: 94px;
+  color: #b6b4b4;
 }
 }
 
@@ -652,5 +732,19 @@ a:hover
     margin-right: 5%;
     margin-left: 11%;
 }
-
+.container2 .con2-grid{
+  display: grid;
+  grid-gap: -20%;
+  grid-template-columns: auto  ;
+  padding-right: 6%;
+}
+img{
+width: 91%;
+margin: 7%;
+}
+.container2 .hover-image:hover .hover-details {
+  top: 52%;
+  left: 43%;
+  opacity: 1;
+}
 }
