styled text in container 3 to fit the screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -1084,9 +1084,10 @@ nav {
       margin: 7%; }
 
   .container3 {
-    width: 80%;
-    /* padding: 50px 0; */
-    margin: 50px auto;
+    width: 82%;
+    /* font-size: 2vh; */
+    padding: 53px 3px;
+    margin: 47px auto;
     position: relative;
     /* overflow: hidden; */
     display: grid;
@@ -1106,7 +1107,13 @@ nav {
 
   .container3 .time-text h2 {
     color: white;
+    font-size: 3vh;
     white-space: nowrap; }
+
+  .container3 .time-text-left h2 {
+    color: white;
+    margin-bottom: 11%;
+    font-size: 3vh; }
 
   .container3 .time-left {
     text-align: left;
@@ -1128,7 +1135,7 @@ nav {
   .footer a {
     display: inline;
     white-space: nowrap;
-    margin-left: 37%;
+    margin-left: 9%;
     background: none;
     color: grey;
     border-radius: 100%;
@@ -1145,14 +1152,14 @@ nav {
 
   .footer a span {
     display: inline;
-    margin-left: 118%;
+    margin-left: 186%;
     color: white;
-    font-size: 14px;
+    font-size: 9px;
     font-weight: bold;
     position: absolute;
-    bottom: -113px;
-    left: -232%;
-    padding: 1px 2px;
+    bottom: -87px;
+    left: -86%;
+    padding: 1px 1px;
     visibility: hidden;
     opacity: 0;
     -webkit-transition: all .4s;
