--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -51,7 +51,7 @@
 }
 .header-text{
     float: right;
-    color: white;
+    color: $text-color;
     margin: 11%;
     margin-left: 50%;
     text-shadow: 4px 4px rgb(14, 12, 12);
@@ -75,7 +75,7 @@
 
 a{
     text-decoration: none;
-    color: white;
+    color: $text-color;
     
     transition: color 0.3s ease;
   }
@@ -119,7 +119,7 @@ a{
     margin-bottom: 5px;
     position: relative;
     text-decoration: none;
-    background: white;
+    background: $text-color;
     text-shadow: 4px 4px rgb(14, 12, 12);
     border-radius: 3px;
     
@@ -147,7 +147,7 @@ a{
   {
     opacity: 1;
     transform: rotate(45deg) translate(-2px, -1px);
-    background: rgb(35, 139, 177);
+    background: $light-blue;
     left:35px;
     text-decoration: none;
   }
@@ -171,8 +171,8 @@ a{
     padding: 50px;
     text-decoration: none;
     padding-top: 125px;
-    color: white;
-    background:rgba(0, 0, 0, 0.7);
+    color: $text-color;
+    background:$transparent-black;
     list-style-type: none;
     -webkit-font-smoothing: antialiased;
     /* to stop flickering of text in safari */
@@ -189,7 +189,7 @@ a{
     font-size: 22px;
     text-shadow: 2px 2px rgb(14, 12, 12);
     text-decoration: none;
-    color: white;
+    color: $text-color;
   }
   
   /*
@@ -210,14 +210,14 @@ a{
     position: relative;
     background-attachment: fixed;
     .header-text{
-      background:rgba(0, 0, 0, 0.7);
+      background:$transparent-black;
       padding: 50px;
       display: grid;
       margin: 0px;
       bottom: 0px;
       left: 19%;
       right: 18%;
-     color: white;
+     color: $text-color;
      .text-grid{
       grid-template-columns: auto auto;
       display: inline-grid;
@@ -226,7 +226,7 @@ a{
       padding: 6px;
        img{
         border-radius: 50%;
-        border: 6px solid white;
+        border: 6px solid $text-color;
         width: 38vh;
         margin-left: 64%;
        }
@@ -251,20 +251,20 @@ a{
     height: 100%;
 
     h1{
-        color: white;
+        color: $text-color;
     text-align: center;
     font-size: 6vh;
     padding-top: 19%;
     text-shadow: 4px 4px rgb(14, 12, 12);
     }
     h3{
-        color: white;
+        color: $text-color;
         text-align: center;
         font-size: 3vh;
   
     }
     h4{
-        color: white;
+        color: $text-color;
     }
 }
 .skills-section{
@@ -276,7 +276,7 @@ a{
     img{
       width: 22%;
     border-radius: 50%;
-    border: 6px solid white;
+    border: 6px solid $text-color;
     padding: 34px;
     margin-right: 28px;
     }
@@ -293,14 +293,14 @@ a{
     position: relative;
 
     .con2{
-        background-color: rgba(0, 0, 0, 0.7);
+        background-color: $transparent-black;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
     }
     h1{
-        color: white;
+        color: $text-color;
         text-align: center;
         padding-top: 3%;
         font-size: 6vh;
@@ -324,7 +324,7 @@ a{
       overflow: hidden;
     }
     .hover-image .hover-overlay{
-      background: rgba(0,0,0,0.7);
+      background: $transparent-black;
       position: absolute;
       margin: 10%;
       width: 100%;
@@ -363,7 +363,7 @@ a{
   opacity: 1;
     }
     .hover-details h3{
-      color: #fff;
+      color: $text-color;
       font-weight: 500;
       letter-spacing: 0.15em;
       margin-bottom: 0.5em;
@@ -392,7 +392,7 @@ a{
       margin-left: -1px;
       width: 2px;
       height: 100%;
-      background: rgb(35, 139, 177);
+      background: $light-blue;
       z-index: 1;
     }
     .time {
@@ -421,8 +421,8 @@ a{
   width: 16px;
   height: 16px;
   border-radius: 50%;
-  border: 2px solid rgb(35, 139, 177);
-  background: rgb(35, 139, 177);
+  border: 2px solid $light-blue;
+  background: $light-blue;
   margin-top: 10px;
   z-index: 9999
 }
@@ -432,16 +432,16 @@ a{
     margin-bottom: 94px;
     color: rgb(182, 180, 180);
     h2{
-      color: white;
+      color: $text-color;
     }
     h4{
-      color: white;
+      color: $text-color;
       margin-bottom: 11%;
     }
 }
 
   .time-text h5{
-    color: rgb(35, 139, 177);
+    color: $light-blue;
   }
   .time-text-left {
     width: 95%;
@@ -449,31 +449,31 @@ a{
       margin-bottom: 94px;
       color: rgb(182, 180, 180);
       h2{
-        color: white;
+        color: $text-color;
         margin-bottom: 11%;
         
       }
       h4{
-        color: white;
+        color: $text-color;
         
       }
   }
   .time-text-left h5{
-    color: rgb(35, 139, 177);
+    color: $light-blue;
   }
  
  }
  .container4{
   
   color: red;
-  background:rgba(0, 0, 0, 0.7);
+  background:$transparent-black;
   padding: 50px;
   position: absolute;
   margin: 0px;
   bottom: 0px;
   left: 19%;
   right: 18%;
- color: white;
+ color: $text-color;
  
 }
 .footer {
@@ -492,7 +492,7 @@ a{
   h1{
     text-align: center;
     font-size: 6vh;
-    color: white;
+    color: $text-color;
     text-shadow: 4px 4px #0e0c0c;
   }
   p{
@@ -531,7 +531,7 @@ a{
   a span{
     display: inline;
     margin-left: 100%;
-    color: white;
+    color: $text-color;
     font-size: 14px;
     font-weight: bold;
     position: absolute;
@@ -576,12 +576,12 @@ a{
   }
 }
 .copy{
-  background-color: #040A10;
+  background-color:$dark-blue;
   height: 6vh;
   h4{
     text-align: center;
     /* margin-top: 0px; */
-    color: white;
+    color: $text-color;
     /* top: 10px; */
     padding-top: 7px;
   }
