--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -9,7 +9,7 @@
   }
     .header-text{
         float: right;
-        color: white;
+        color: $text-color;
         margin: 11%;
         margin-left: 50%;
         text-shadow: 4px 4px rgb(14, 12, 12);
@@ -33,8 +33,8 @@
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
-  margin-left: 128%;
+  $text-color-space: nowrap;
+  margin-left: 165%;
   background: none;
   color: grey;
   border-radius: 100%;
@@ -63,7 +63,7 @@
   }
     .header-text{
         float: right;
-        color: white;
+        color: $text-color;
         margin: 11%;
         margin-left: 50%;
         text-shadow: 4px 4px rgb(14, 12, 12);
@@ -87,7 +87,7 @@
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
+  $text-color-space: nowrap;
   margin-left: 103%;
   background: none;
   color: grey;
@@ -132,7 +132,7 @@
 }
 .header-text{
   float: right;
-  color: white;
+  color: $text-color;
   margin: 11%;
   margin-left: 50%;
   text-shadow: 4px 4px rgb(14, 12, 12);
@@ -152,7 +152,7 @@
 }
 .container1 .header-text .text-grid img {
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid $text-color;
   width: 33vh;
   margin-left: 46%;
 }
@@ -165,13 +165,13 @@
   bottom: 0px;
   left: 19%;
   right: 18%;
- color: white;
+ color: $text-color;
 }
 
 
 a{
   text-decoration: none;
-  color: white;
+  color: $text-color;
   
   transition: color 0.3s ease;
 }
@@ -206,7 +206,7 @@ a:hover
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
+  $text-color-space: nowrap;
   margin-left: 75%;
   background: none;
   color: grey;
@@ -254,7 +254,7 @@ a:hover
 }
 .header-text{
   float: right;
-  color: white;
+  color: $text-color;
   margin: 11%;
   margin-left: 50%;
   text-shadow: 4px 4px rgb(14, 12, 12);
@@ -281,13 +281,13 @@ a:hover
   bottom: 0px;
   left: 19%;
   right: 18%;
- color: white;
+ color: $text-color;
 }
 
 
 a{
   text-decoration: none;
-  color: white;
+  color: $text-color;
   
   transition: color 0.3s ease;
 }
@@ -303,7 +303,7 @@ a:hover
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
+  $text-color-space: nowrap;
   margin-left: 75%;
   background: none;
   color: grey;
@@ -348,7 +348,7 @@ a:hover
 }
 .header-text{
   float: right;
-  color: white;
+  color: $text-color;
   margin-top: 30%;
   /* margin: 11%; */
   /* margin-left: 50%; */
@@ -376,7 +376,7 @@ a:hover
 }
 .container1 .header-text .text-grid img {
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid $text-color;
   width: 33vh;
   margin-left: -3%;
 }
@@ -390,13 +390,13 @@ a:hover
   top: 73%;
   left: 3%;
   right: 4%;
-  color: white;
+  color: $text-color;
 }
 
 
 a{
   text-decoration: none;
-  color: white;
+  color: $text-color;
   
   transition: color 0.3s ease;
 }
@@ -414,7 +414,7 @@ a:hover
   position: relative;
   background-attachment: fixed;
   .con1 h1 {
-    color: white;
+    color: $text-color;
     margin-left: 45px;
     text-align: center;
     font-size: 5vh;
@@ -438,7 +438,7 @@ a:hover
       height: 100%;
   }
   h1{
-      color: white;
+      color: $text-color;
       text-align: center;
       padding-top: 3%;
       font-size: 6vh;
@@ -487,7 +487,7 @@ a:hover
 .container1 .skills-section .skills-sub img {
   width: 75%;
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid $text-color;
   padding: 14px;
   margin-right: 28px;
 }
@@ -510,7 +510,7 @@ a:hover
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
+  $text-color-space: nowrap;
   margin-left: 37%;
   background: none;
   color: grey;
@@ -529,7 +529,7 @@ a:hover
 .footer a span {
   display: inline;
   margin-left: 100%;
-  color: white;
+  color: $text-color;
   font-size: 14px;
   font-weight: bold;
   position: absolute;
@@ -572,7 +572,7 @@ a:hover
 }
 .header-text{
   float: right;
-  color: white;
+  color: $text-color;
   margin-top: 37%;
   /* margin-left: 17%; */
   text-shadow: 4px 4px #0e0c0c;
@@ -599,7 +599,7 @@ a:hover
 .container1 .header-text .text-grid img {
   display: none;
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid $text-color;
   width: 38vh;
   margin-left: 64%;
 }
@@ -612,13 +612,13 @@ a:hover
   bottom: 0px;
   left: 3%;
   right: 4%;
-  color: white;
+  color: $text-color;
 }
 
 
 a{
   text-decoration: none;
-  color: white;
+  color: $text-color;
   
   transition: color 0.3s ease;
 }
@@ -648,12 +648,12 @@ a:hover
 .container1 .skills-section .skills-sub img {
   width: 75%;
   border-radius: 50%;
-  border: 6px solid white;
+  border: 6px solid $text-color;
   padding: 14px;
   margin-right: 28px;
 }
 .container1 .con1 h1 {
-  color: white;
+  color: $text-color;
   text-align: center;
   font-size: 5vh;
   padding-top: 19%;
@@ -695,7 +695,7 @@ a:hover
       height: 100%;
   }
   h1{
-      color: white;
+      color: $text-color;
       text-align: center;
       padding-top: 3%;
       font-size: 6vh;
@@ -738,12 +738,12 @@ display: none;
   color: #b6b4b4;
 }
 .container3 .time-text h2 {
-  color: white;
+  color: $text-color;
   font-size: 3vh;
-  white-space: nowrap;
+  $text-color-space: nowrap;
 }
 .container3 .time-text-left h2 {
-  color: white;
+  color: $text-color;
   margin-bottom: 11%;
   font-size: 3vh;
 }
@@ -766,7 +766,7 @@ display: none;
 }
 .footer a {
   display: inline;
-  white-space: nowrap;
+  $text-color-space: nowrap;
   margin-left: 9%;
   background: none;
   color: grey;
@@ -785,7 +785,7 @@ display: none;
 .footer a span {
   display: inline;
   margin-left: 186%;
-  color: white;
+  color: $text-color;
   font-size: 9px;
   font-weight: bold;
   position: absolute;
@@ -839,7 +839,7 @@ display: none;
 }
 .header-text{
   float: right;
-  color: white;
+  color: $text-color;
   /* top: 12%; */
   margin-top: 63%;
   /* margin: 4%; */
@@ -869,13 +869,13 @@ display: none;
   top: 66%;
   left: 5%;
   right: 5%;
-  color: white;
+  color: $text-color;
 }
 
 
 a{
   text-decoration: none;
-  color: white;
+  color: $text-color;
   
   transition: color 0.3s ease;
 }
@@ -896,7 +896,7 @@ a:hover
   img{
     display: none;
     border-radius: 50%;
-    border: 6px solid white;
+    border: 6px solid $text-color;
     width: 32vh;
     margin-left: 6%;
   }
@@ -921,7 +921,7 @@ a:hover
   bottom: 0px;
   left: 19%;
   right: 18%;
-  color: white;
+  color: $text-color;
 }
 .container1 .header-text .text-grid .text {
   padding-right: 0;
@@ -935,7 +935,7 @@ a:hover
 .container1 .skills-section .skills-sub img {
   width: 70%;
     border-radius: 50%;
-    border: 6px solid white;
+    border: 6px solid $text-color;
     padding: 35px;
     margin-bottom: 6%;
     margin-right: 5%;
