--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,20 @@ nav {
     /* top: 10px; */
     padding-top: 7px; }
 
+#myBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px; }
+
 /* 
   ##Device = Desktops
   ##Screen = 1281px to higher resolution desktops
