--- a/css/styles.css
+++ b/css/styles.css
@@ -278,7 +278,8 @@ nav {
     left: 50%;
     opacity: 1; }
   .container2 .hover-details h3 {
-    color: white;
+    color: #238bb1;
+    text-shadow: 1px 1px white;
     font-weight: 500;
     letter-spacing: 0.15em;
     margin-bottom: 0.5em;
