--- a/css/styles.css
+++ b/css/styles.css
@@ -205,11 +205,11 @@ nav {
       grid-template-columns: auto auto auto;
       margin: 12%; }
       .container1 .skills-section .skills-sub img {
-        width: 22%;
-        border-radius: 50%;
+        width: 20%;
+        /* border-radius: 50%; */
         border: 6px solid white;
         padding: 34px;
-        margin-right: 28px; }
+        margin-right: 81px; }
 
 .container2 {
   background-image: url("../img/con3.jpg");
