--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -203,7 +203,7 @@ a{
 
   .container1 {
     background-image:  url("../img/con1.jpg");
-    height: 148vh;
+    height: 142vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -254,7 +254,8 @@ a{
         color: $text-color;
     text-align: center;
     font-size: 6vh;
-    padding-top: 19%;
+    padding-top: 27%;
+    margin-bottom: -73px;
     text-shadow: 4px 4px rgb(14, 12, 12);
     }
     h3{
