--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -49,6 +49,13 @@
   -moz-transition: all .5s;
   transition: all .5s;
 }
+.container1 .skills-section .skills-sub img {
+  width: 20%;
+  border-radius: 50%;
+  border: 6px solid white;
+  padding: 34px;
+  margin-right: 81px;
+}
 }
 
 
@@ -102,6 +109,13 @@
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
   transition: all .5s;
+}
+.container1 .skills-section .skills-sub img {
+  width: 20%;
+  border-radius: 50%;
+  border: 6px solid white;
+  padding: 34px;
+  margin-right: 81px;
 }
 }
 
@@ -222,6 +236,13 @@ a:hover
   -moz-transition: all .5s;
   transition: all .5s;
 }
+.container1 .skills-section .skills-sub img {
+  width: 19vh;
+border-radius: 50%;
+border: 6px solid white;
+padding: 21px;
+margin-right: 26px;
+}
 }
 
 
@@ -297,9 +318,11 @@ a:hover
   color: black;
 }
 .container1 .skills-section .skills-sub {
-  display: inline-flex;
-  grid-template-columns: auto auto auto;
-  margin: 12%;
+  display: grid;
+grid-template-columns: auto auto auto auto;
+margin: 15%;
+grid-gap: -9%;
+margin-top: 24%;
 }
 .footer a {
   display: inline;
@@ -318,6 +341,13 @@ a:hover
   -webkit-transition: all .5s;
   -moz-transition: all .5s;
   transition: all .5s;
+}
+.container1 .skills-section .skills-sub img {
+  width: 19vh;
+border-radius: 50%;
+border: 6px solid white;
+padding: 21px;
+margin-right: 26px;
 }
 }
 
@@ -479,16 +509,16 @@ a:hover
 .container1 .skills-section .skills-sub {
   display: grid;
   grid-template-columns: auto auto;
-  /* margin: 5%; */
-  margin-top: 9px;
-  margin-left: 196px;
-  grid-gap: 16px;
+  margin: 5%;
+  margin-top: 18%;
+  margin-left: 106px;
+  grid-gap: 64px;
 }
 .container1 .skills-section .skills-sub img {
-  width: 75%;
+  width: 18vh;
   border-radius: 50%;
-  border: 6px solid $text-color;
-  padding: 14px;
+  border: 6px solid white;
+  padding: 18px;
   margin-right: 28px;
 }
 .container3 .time-text {
@@ -639,17 +669,17 @@ a:hover
 }
 .container1 .skills-section .skills-sub {
   display: grid;
-    grid-template-columns: auto auto;
-    /* margin: 5%; */
-    margin-top: 102px;
-    margin-left: 67px;
-    grid-gap: 53px;
+  grid-template-columns: auto auto;
+  margin: 5%;
+  margin-top: 89px;
+  margin-left: 51px;
+  grid-gap: 91px;
 }
 .container1 .skills-section .skills-sub img {
-  width: 173%;
+  width: 189%;
     border-radius: 50%;
     border: 6px solid white;
-    padding: 17px;
+    padding: 22px;
     margin-right: 12px;
 }
 .container1 .con1 h1 {
@@ -932,14 +962,21 @@ a:hover
   margin-right: -10%;
   /* text-align: center; */
 }
+.container1 .skills-section .skills-sub {
+  display: inline;
+  grid-template-columns: auto auto auto;
+  margin: 14%;
+  margin-top: 24%;
+  margin-left: 11%;
+}
 .container1 .skills-section .skills-sub img {
-  width: 70%;
-    border-radius: 50%;
-    border: 6px solid $text-color;
-    padding: 35px;
-    margin-bottom: 6%;
-    margin-right: 5%;
-    margin-left: 11%;
+  width: 68%;
+border-radius: 50%;
+border: 6px solid white;
+padding: 19px;
+margin-bottom: 6%;
+margin-right: 5%;
+margin-left: 11%;
 }
 .container2 .con2-grid{
   display: grid;
