--- a/sass/partials/_responsiveness.scss
+++ b/sass/partials/_responsiveness.scss
@@ -117,6 +117,14 @@
   padding: 34px;
   margin-right: 81px;
 }
+.container2 {
+  background-image: url(../img/con3.jpg);
+  height: 261vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
 }
 
 /* 
@@ -201,7 +209,7 @@ a:hover
 }
 .container2 {
   background-image: url(../img/con3.jpg);
-  height: 245vh;
+  height: 296vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -454,7 +462,7 @@ a:hover
 }
 .container2{
   background-image:  url("../img/con3.jpg");
-  height: 296vh;
+  height: 345vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -573,7 +581,18 @@ a:hover
   word-spacing: 30px;
 }
 }
+  
 
+@media screen and (device-aspect-ratio: 2/3) {
+  .container2 {
+    background-image: url(../img/con3.jpg);
+    height: 362vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+}
 
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
@@ -698,7 +717,7 @@ a:hover
 }
 .container2{
   background-image:  url("../img/con3.jpg");
-  height: 336vh;
+  height: 336vh ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
