--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,10 @@ nav {
   margin: 50px auto;
   position: relative;
   overflow: hidden; }
+  .container3 .line-break {
+    border: 1px solid white;
+    display: none;
+    width: 73%; }
   .container3:before {
     content: "";
     position: absolute;
@@ -1149,6 +1153,10 @@ nav {
     /* overflow: hidden; */
     display: grid;
     grid-template-columns: auto; }
+    .container3 .line-break {
+      border: 1px solid white;
+      width: 179%;
+      display: inline-block; }
 
   .container3 .dot {
     display: none; }
