--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -386,7 +386,11 @@ a{
     margin: 50px auto;
     position: relative;
     overflow: hidden;
-
+    .line-break{
+      border: 1px solid white;
+      display: none;
+      width: 73%;
+    }
     &:before{     
       content:"";
       position: absolute;
@@ -419,6 +423,7 @@ a{
   text-align: right;
   direction: rtl;
   padding-bottom: 84px;
+
 }
 .dot {
   width: 16px;
